# Supercharge-your-Python-with-Native-Code

./: .envrc  .gitignore  CMakeLists.txt  README.md  example.py  kmeans_a.py  kmeans_naive.py  kmeans_numba.py  kmeans_numpy.py  kmeans_numpy_a.py  main.py  plot.py  presentation.typ  pyproject.toml  results.csv
supercharge/: lib.cpp  lib.hpp  wrapper.cpp
templates/: CMakeLists.txt  kmeans_naive.py  kmeans_numba.py  kmeans_numpy.py  pyproject.toml
templates/supercharge/: lib_simple.cpp  wrapper.cpp
