[project]
name = "supercharge-your-python-with-native-code"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "h5py>=3.16.0",
    "matplotlib>=3.10.9",
    "memray>=1.19.3",
    "numba>=0.65.1",
    "polars",
    "pyarrow",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
]

[dependency-groups]
dev = [
    "nanobind>=2.12.0",
]

[build-system]
requires = ["scikit-build-core >=0.4.3", "nanobind >=1.3.2"]
build-backend = "scikit_build_core.build"

